--- a/src/App.css
+++ b/src/App.css
@@ -10,8 +10,8 @@
 
 .container2 {
   height: 90vh;
-  background-image: url("../public/img/zhenshhina-gotovit-edu-v-svetloj-ujutnoj-kuhne.jpeg");
-  background-size: 100%;
+  background-image: url("../public/img/young-women-presenting-high-fat-foods_74855-5307.webp");
+  background-size: cover;
 
 }
 
