--- a/src/App.css
+++ b/src/App.css
@@ -1,36 +1,157 @@
-.App {
-  text-align: center;
-}
+@import url('https://fonts.googleapis.com/css2?family=Caveat:wght@500&family=Fredoka:wght@300;400&display=swap');
 
 .container{
-  width: 100%;
-  display: flex;
   justify-content: space-between;
+  max-width: 100vw;
 }
 
 .container2 {
-  height: 90vh;
-  background-image: url("../public/img/young-women-presenting-high-fat-foods_74855-5307.webp");
+  height: 92vh;
+  background-image: url("../public/img/1626279801_33-kartinkin-com-p-svetlii-fon-dlya-menyu-krasivo-36.png");
   background-size: cover;
-
 }
 
 .textcontainer2 {
-  padding-top: 10px;
-  font-size: 30px;
+  padding-top: 18vh;
+  padding-left: 10vh;
+  font-size: 80px;
   font-weight: bold;
+  font-family: 'Caveat', cursive;
 }
 
 .nav{
-  height: 10vh;
+  height: 8vh;
 }
-
 
 .navlink{
-  font-size: 20px;
-  margin-left: 20px;
+  font-size: 22px;
+  margin-left: 40px;
   cursor: pointer;
 }
+
+.searchContainer{
+  display: flex;
+  align-content: center;
+  flex-direction: column;
+}
+
+.mb-3{
+  width: 50vw;
+  margin: 0 auto;
+  padding-top: 5vh;
+}
+
+.formText{
+  font-size: 30px;
+  font-family: 'Caveat', cursive;
+}
+
+.form-control, .form-select{
+  font-size: 20px !important;
+  font-family: 'Caveat', cursive;
+}
+
+.btn {
+  font-size: 25px !important;
+}
+
+.btn-primary {
+  font-family: 'Caveat', cursive;
+  color: black !important;
+  background-color: #e1dbd3 !important;
+  border-color: black !important;
+  max-width: 10vw;
+  display: block;
+  margin-left: 5px !important;
+}
+
+.btn-search {
+  margin: 0 auto !important;
+}
+
+.recipe{
+  background-image: url("../public/img/1611749943_5-p-fon-dlya-reklami-kafe-6.jpeg");
+
+  background-repeat: repeat-y;
+  max-width: 100vw;
+  min-height: 92vh;
+}
+
+.text {
+  font-size: 50px;
+  font-family: 'Caveat', cursive;
+  text-align: center;
+  padding-top: 10px;
+}
+
+.textnull {
+  font-size: 30px;
+  font-family: 'Caveat', cursive;
+  text-align: center;
+  padding-top: 20px;
+}
+
+.randomRecipe{
+  height: 92vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.card {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  min-width: 20vw !important;
+  word-wrap: break-word;
+  background-color: #fff;
+  background-clip: border-box;
+  border: 1px solid rgba(0,0,0,.125);
+  border-radius: 0.45rem !important;
+  padding: 15px;
+  margin-left: 5px;
+  margin-bottom: 10px;
+}
+
+.random-card{
+  min-width: 40vw !important;
+}
+
+.card-body {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.card-title {
+  text-align: center;
+}
+
+.btn-group {
+  display: flex;
+  justify-content: center;
+}
+
+.recipe-list {
+  margin: 30px auto;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  width: 50vw;
+}
+
+.modal-content {
+  margin-top: 10vh;
+}
+
+.modal-title {
+  padding-left: 35%;
+}
+
+
+
 
 
 
